Fix Navigation title position on mobile

--- a/style.css
+++ b/style.css
@@ -16,14 +16,14 @@ Use it to make something cool, have fun, and share what you've learned with othe
 @media(max-width: 640px){
   .navbar-title{
     font-size: 40px;
-    top: 34px;
+    top: 40px;
   }
 }
 
 @media(min-width: 640px){
   .navbar-title{
     font-size: 60px;
-    top: 25px;
+    top: 20px;
   }
 }
 
@@ -71,7 +71,7 @@ Use it to make something cool, have fun, and share what you've learned with othe
 .HeaderMenu h1.navbar-title{
   font-weight: bolder;
   color: white;
-  position: relative;
+  position: absolute;
   text-transform: uppercase;
 }
 
